# aoc-ocaml

./: .gitignore  dune-project  tanenbaum.opam
lib/: drivers.ml  dune  fn.ml  import.ml  problem_runner.ml
lib/problems/: dune  problem_2015_07.ml  problem_2015_08.ml  problem_2015_09.ml  problem_2015_10.ml  problem_2015_11.ml  problem_2015_12.ml  problem_2015_13.ml  problem_2015_14.ml  problem_2015_15.ml  problem_2015_16.ml  problem_2015_17.ml  problem_2015_17.mli  problem_2015_18.ml  problem_2015_19.ml  problem_2022_01.ml  problem_2022_02.ml  problem_2023_01.ml  problem_2023_02.ml  problem_2023_03.ml  problem_2023_04.ml  problem_2023_05.ml  problem_2023_06.ml  problem_2023_07.ml  problem_2023_08.ml  problem_2023_09.ml
